update some views

--- a/views/vwUser/courses.hbs
+++ b/views/vwUser/courses.hbs
@@ -8,8 +8,8 @@
     <div class="card-body">
         {{#if this.empty}}
             <div class="m-5">
-                <p class="card-title">No data</p>
-                <p class="card-text">Please return next time.</p>
+                <h4 class="card-title">Sorry,</h4>
+                <h4 class="card-text">Please return next time!</h4>
             </div>
         {{else}}
             <ul class="list-group list-group-flush justify-content-center">
