--- a/views/vwUser/my-courses.hbs
+++ b/views/vwUser/my-courses.hbs
@@ -6,9 +6,8 @@
     </h1>
 
     {{#if empty}}
-    <div class="m-5"
-        <p class="card-title">No data</p>
-        <p class="card-text">Please return next time.</p>
+    <div class="m-5">
+        <h4 class="card-text">Your courses list is empty now!</h4>
     </div>
     {{else}}
     <div class="">
