--- a/views/vwAccount/register.hbs
+++ b/views/vwAccount/register.hbs
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css">
     <script
@@ -108,7 +109,6 @@
                             </div>
 
                             <!-- Submit button -->
-                            <a href="/users/login"   class="btn btn-primary btn-block mb-4">Sign in</a>
                             <button type="submit" class="btn btn-primary btn-block mb-4">
                                 Sign up
                             </button>
@@ -121,6 +121,11 @@
                                 </a>
 
 
+                            </div>
+
+                            <div class="text-center mt-5">
+                                <span>Already has an account?</span>
+                                <a href="/users/login">Sign in</a>
                             </div>
 
                     </div>
@@ -146,5 +151,25 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 
+<footer>
+    <div class="gradient-home d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+        <!-- Copyright -->
+        <div class="text-light mb-3 mb-md-0">
+            5Horses Online Academy 2022. All rights reserved
+        </div>
+        <!-- Copyright -->
+
+        <!-- Right -->
+        <div>
+            <a href="#!" class="text-white me-4">
+                <i class="fa fa-facebook-official"></i>
+            </a>
+            <a href="#!" class="text-white me-4 text-danger">
+                <i class="fa fa-google"></i>
+            </a>
+        </div>
+        <!-- Right -->
+    </div>
+</footer>
 
 </html>
