Admin panel completing

--- a/views/vwAdmin/byCourse.hbs
+++ b/views/vwAdmin/byCourse.hbs
@@ -38,7 +38,7 @@
                         </td>
 
                         <td class ="text-center">
-                            <a class="btn btn-primary btn-sm" href="/lectures/view/{{courseID}}" role="button" title="Edit Category">
+                            <a class="btn btn-primary btn-sm" href="/admin/lectures/admin-view/{{courseID}}" role="button" title="Edit Category">
                                 <i class="fa fa-eye" aria-hidden="true"></i>
                             </a>
                         </td>
