--- a/views/vwAdmin/byLecture.hbs
+++ b/views/vwAdmin/byLecture.hbs
@@ -1,13 +1,47 @@
-<ul class="list-group">
-    <h1 class="list-header">
+<ul class="list-group ">
+    <h1 class="list-header d-flex justify-content-between">
         Lectures
+        <a class="btn btn-outline-success mr-4" href="/admin/courses/view/{{courseID}}" role="button">
+            <i class="fa fa-backward" aria-hidden="true"></i>
+            Courses
+        </a>
     </h1>
+
     {{#if empty}}
         No content!
     {{else}}
-        {{#each this.list}}
-            <a href="/lectures/{{lecID}}" class="list-group-item list-group-item-action ">{{lecName}}</a>
-        {{/each}}
+
+            <div class="card-body">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Lectures</th>
+                        <th class ="text-center">Hidden </th>
+                        <th class ="text-center">View detail</th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {{#each this.list}}
+                        <tr>
+                            <td scope="row">{{lecID}}</td>
+                            <td>{{lecName}}</td>
+                            <td class ="text-center">{{#if hidden}} true {{else}} false{{/if}}</td>
+                            <td class ="text-center">
+                                <a class="btn btn-primary btn-sm" href="/admin/lectures/admin-view/detail/{{lecID}}" role="button" title="Edit Field">
+                                <i class="fa fa-eye" aria-hidden="true"></i>
+                                </a>
+                            </td>
+
+
+
+                        </tr>
+                    {{/each}}
+                    </tbody>
+                </table>
+            </div>
+
     {{/if}}
 
 
