--- a/views/vwAdmin/byUser.hbs
+++ b/views/vwAdmin/byUser.hbs
@@ -36,7 +36,7 @@
                         </td>
 
                         <td class ="text-center">
-                            <a class="btn btn-primary btn-sm" href="/admin/users/view/{{userID}}" role="button" title="View User">
+                            <a class="btn btn-primary btn-sm" href="/users/profile/{{userID}}" role="button" title="View User">
                                 <i class="fa fa-eye" aria-hidden="true"></i>
                             </a>
                         </td>
