--- a/views/vwAdmin/vwUser/edit.hbs
+++ b/views/vwAdmin/vwUser/edit.hbs
@@ -29,6 +29,9 @@
                 <i class="fa fa-trash" aria-hidden="true"></i>
                 Delete
             </button>
+            <button type="submit" class="btn btn-danger" formaction="/admin/users/set-teacher">
+                Set Teacher
+            </button>
             <button type="submit" class="btn btn-primary" formaction="/admin/users/edit">
                 <i class="fa fa-check" aria-hidden="true"></i>
                 Save
