fix bugs when adding courses and lectures

--- a/views/vwTeacher/addLecture.hbs
+++ b/views/vwTeacher/addLecture.hbs
@@ -235,6 +235,7 @@
                         <div class="row text-center">
                             <div class="col-md-12">
                                 <div class="form-group first">
+                                    <input name="teacherID" value={{course.teacherID}} hidden />
                                     <label for="Files" style="font-size: 32px;" class="font-weight-bold mb-3">Lecture video</label>
                                     <div class="file-upload">
                                         <button
