edit button in detail page when user is teacher

--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -317,10 +317,10 @@
             </div>
             <div class="d-flex justify-content-between">
               <div>
-                <button type="submit" class="btn btn-outline-light" formaction="/teacher/profile?id={{this.teaher.teacherID}}">
+                <a class="btn btn-outline-light" href="/teacher/profile?id={{this.teacher.teacherID}}">
                   <i class="fa fa-backward" aria-hidden="true"></i>
-                  Cancel
-                </button>
+                  Back
+                </a>
               </div>
               <div>
                 <button type="submit" class="btn btn-primary" formaction="/teacher/addCourse?id={{this.teacher.teacherID}}">
