--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -259,7 +259,21 @@ body{
     width: 60%;
 }
 
-.course-title-price {
+.detail-edit-button {
+    position: absolute;
+    bottom: 20px;
+    border: 0;
+    border-radius: 10px;
+    width: 150px;
+    padding: 15px;
+    background-color: white;
+    text-align: center;
+    color: black;
+}
+
+.detail-edit-button:hover {
+    opacity: 0.8;
+    text-decoration: none;
 }
 
 .price-box {
