--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,12 +3,61 @@
 
     <!-- Initialize Swiper -->
     <script>
-        var swiper = new Swiper(".mySwiper", {
+        var swiper = new Swiper(".mySwiper1", {
             slidesPerView: 4,
             spaceBetween: 30,
+            slidesPerGroup: 1,
+            loop: true,
+            loopFillGroupWithBlank: true,
             pagination: {
                 el: ".swiper-pagination",
+                clickable: true
+            },
+            navigation: {
+                nextEl: ".mySwiper1 .swiper-button-next",
+                prevEl: ".mySwiper1 .swiper-button-prev"
+            }
+        });
+        var swiper2 = new Swiper(".mySwiper2", {
+            slidesPerView: 4,
+            spaceBetween: 30,
+            slidesPerGroup: 1,
+            loop: true,
+            loopFillGroupWithBlank: true,
+            pagination: {
+                el: ".swiper-pagination2",
                 clickable: true,
+            },navigation: {
+                nextEl: ".mySwiper2 .swiper-button-next",
+                prevEl: ".mySwiper2 .swiper-button-prev",
+            },
+        });
+        var swiper3 = new Swiper(".mySwiper3", {
+            slidesPerView: 4,
+            spaceBetween: 30,
+            slidesPerGroup: 1,
+            loop: true,
+            loopFillGroupWithBlank: true,
+            pagination: {
+                el: ".swiper-pagination3",
+                clickable: true,
+            },navigation: {
+                nextEl: ".mySwiper3 .swiper-button-next",
+                prevEl: ".mySwiper3 .swiper-button-prev",
+            },
+        });
+        var swiper4 = new Swiper(".mySwiper4", {
+            slidesPerView: 4,
+            spaceBetween: 30,
+            slidesPerGroup: 1,
+            loop: true,
+            loopFillGroupWithBlank: true,
+            pagination: {
+                el: ".swiper-pagination5",
+                clickable: true,
+            },navigation: {
+                nextEl: ".mySwiper4 .swiper-button-next",
+                prevEl: ".mySwiper4 .swiper-button-prev",
             },
         });
     </script>
@@ -35,54 +84,12 @@
 
     <div class="row">
         <div class="col-12">
-
-            <div class="mt-3 ml-3 mr-3 mb-5">
-                <h4 class="bg-light">test</h4>
-                <div class="swiper mySwiper">
-                    <div class="swiper-wrapper">
-                        {{#each this.listSubTopNumberStudentCourses}}
-                            <!--                            <div class="swiper-slide"> -->
-                            <!--                                <div class="card-deck">-->
-                            {{#each this}}
-                                <div class="swiper-slide border-0">
-                                    <div class="card border-0 border-white" style="height: 20rem">
-                                        <img class="card-img-top h-50"
-                                             src="https://drive.google.com/uc?export=view&id={{this.image}}" alt="Card
-                                        image cap">
-                                        <div class="card-body h-50">
-                                            <h5 class="card-title">{{this.courseName}}</h5>
-                                            <p class="card-text"> {{this.tinydes}}</p>
-                                            <p class="card-text">
-                                                    <span>
-                                            <div class="checked w-100" style="font-size: medium">
-                                                {{this.rating}}
-                                                {{{printStarByDouble this.rating}}}
-                                                <div class="text-dark">{{this.rating_num}} reviews</div>
-                                            </div>
-                                            </span>
-
-                                            </p>
-                                            <p class="card-text"><small class="text-muted">Last updated 3 mins
-                                                ago</small>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            {{/each}}
-                            <!--                                </div>-->
-                            <!--                            </div>-->
-                        {{/each}}
-                    </div>
-                    <div class="swiper-pagination"></div>
-                </div>
-            </div>
-
             <div class="mt-3 ml-3 mr-3 mb-5">
                 <h4 class="bg-light">Khóa học Nổi bật nhất</h4>
-                <div class="swiper mySwiper">
+                <div class="swiper mySwiper1">
                     <div class="swiper-wrapper">
                         {{#each this.listTopNumberStudentCourses}}
-                            <div class="swiper-slide border-0">
+                            <div class="swiper-slide">
                                 <div class="card border-0" style="height: 100%">
                                     <img class="card-img-top"
                                          src="https://drive.google.com/uc?export=view&id={{this.image}}"
@@ -113,13 +120,15 @@
                             </div>
                         {{/each}}
                     </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
 
             <div class="mt-3 ml-3 mr-3 mb-5">
                 <h4 class="bg-light">Khóa học được xem nhiều nhất</h4>
-                <div class="swiper mySwiper">
+                <div class="swiper mySwiper2">
                     <div class="swiper-wrapper">
                         {{#each this.listDescendingCourses}}
                             <div class="swiper-slide border-0">
@@ -153,13 +162,15 @@
                             </div>
                         {{/each}}
                     </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
 
             <div class="mt-3 ml-3 mr-3 mb-5">
                 <h4 class="bg-light">Khóa học mới nhất</h4>
-                <div class="swiper mySwiper">
+                <div class="swiper mySwiper3">
                     <div class="swiper-wrapper">
                         {{#each this.listLastestCourses}}
                             <div class="swiper-slide border-0">
@@ -193,13 +204,15 @@
                             </div>
                         {{/each}}
                     </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
 
             <div class="mt-3 ml-3 mr-3 mb-5">
                 <h4 class="bg-light">Lĩnh vực hot nhất</h4>
-                <div class="swiper mySwiper">
+                <div class="swiper mySwiper4">
                     <div class="swiper-wrapper">
                         {{#each this.listMostEnrolledCourses}}
                             <div class="swiper-slide border-0">
@@ -233,6 +246,8 @@
                             </div>
                         {{/each}}
                     </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
