--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -2,7 +2,7 @@
 <div class="row rounded-14.5 shadow-lg rounded-20 border-info" style="width: 70%; margin-left:15%">
     <div class="col-lg-12 mx-auto mt-3" style="width: 80%">
         <div class="bg-white shadow rounded overflow-hidden">
-            <div class="px-3 pt-0 pb-4" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.background}}); background-color: #f2dfd5">
+            <div class="px-3 pt-0 pb-4" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.bground}}); background-color: #f2dfd5">
                 <div class="media align-items-end">
                     <div class="mr-3 mt-3" style="width: 350px; height: 350px;">
                         <img style="width: 350px; height: 350px; box-shadow: 2px 2px black;" src="https://drive.google.com/uc?export=view&id={{this.teacher.avatar}}" alt="This's avatar" class="rounded-circle mb-2 img-thumbnail">
