--- a/views/layouts/main1.hbs
+++ b/views/layouts/main1.hbs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
   <title>{{lcTitle}}</title>
     <script src="https://cdn.tiny.cloud/1/ia81okpopglafbfo3qtv7pzo8ep13mc3umojyde5ixoe0tgx/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    {{{_sections.css}}}
 </head>
 
 <body>
