--- a/public/css/createCourse.css
+++ b/public/css/createCourse.css
@@ -1,7 +1,6 @@
 
 .file-upload {
-    background: rgb(111,99,117);
-    background: radial-gradient(circle, rgba(111,99,117,1) 12%, rgba(255,255,255,1) 35%, rgba(90,96,97,1) 90%);
+    /*background: rgb(111,99,117);*/
     width: 100%;
     margin: 0 auto;
     padding: 20px;
@@ -11,8 +10,8 @@
 .file-upload-btn {
     width: 100%;
     margin: 0;
-    color: #fff;
-    background: darkgray;
+    color: black;
+    /*background: darkgray;*/
     border: none;
     padding: 10px;
     border-radius: 4px;
