Lecture adding button in detail page when user is a teacher

--- a/views/vwUser/details.hbs
+++ b/views/vwUser/details.hbs
@@ -134,6 +134,12 @@
               Edit
             </h5>
           </a>
+          <a class="detail-upload-button" href="/lectures/add?id={{course.courseID}}">
+            <h5 style="font-weight: 500;">
+              <i class="fa fa-plus" aria-hidden="true"></i>&nbsp;
+              Lecture
+            </h5>
+          </a>
           {{/if}}
         </div>
         
